--- a/page.html
+++ b/page.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Web Development</title>
 	<link rel="stylesheet" type="text/css" href="page.css">
-	<link rel="stylesheet" type="text/css" href="bootstrap-5.2.3-dist\css\bootstrap.min.css">
-	<script type="text/javascript" src="bootstrap-5.2.3-dist\js\bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<script type="text/javascript" src="bootstrap.min.js"></script>
 </head>
 <body>
 
